--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-ibflex @ git+https://github.com/csingley/ibflex.git@master
+ibflex @ git+https://github.com/agusalex/ibflex.git@master
 requests==2.32.0
 colorlog==6.8.0
 diskcache==5.6.3
